# LicodeCppClient

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
core/: hmac.cc  hmac.h  ice_server.h  licode_event.h  licode_nuve_api.cc  licode_nuve_api.h  licode_room.cc  licode_room.h  licode_room_info.h  licode_room_observer.h  licode_signaling.cc  licode_signaling.h  licode_signaling_pkt_builder.cc  licode_signaling_pkt_builder.h  licode_signaling_pkt_creator.cc  licode_signaling_pkt_creator.h  licode_signaling_pkt_parser.cc  licode_signaling_pkt_parser.h  licode_stream.cc  licode_stream.h  licode_stream_info.h  licode_token.h  licode_token_creator.cc  licode_token_creator.h  licode_user.cc  licode_user.h  room_info.h  video_render.cc  video_render.h  webrtc_connection.cc  webrtc_connection.h  webrtc_peer_connection_observer.h  webrtc_stream_info.h  webrtc_wrapper.cc  webrtc_wrapper.h
messenger/: http_defines.h  http_request.h  http_response.h  http_session.cc  http_session.h  http_url.cc  http_url.h  websocket_session.cc  websocket_session.h
thread/: scheduler.cc  scheduler.h  thread_pool.cc  thread_pool.h  worker.cc  worker.h
